--- a/src/app/selection/selectionForm.module.css
+++ b/src/app/selection/selectionForm.module.css
@@ -96,6 +96,7 @@
     transition: background-color 1s ease;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    color: #171717;
 }
 
 .button.grayButton {
